objects/New_Hire_Request__c/New_Hire_Request__c.object-meta.xml
<CustomObject>
    <label>Employee Request</label>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>New Hire Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>