objects/New_Hire_Request__c/fields/ADP_Title__c.field-meta.xml
<CustomField>
    <fullName>ADP_Title__c</fullName>
    <label>ADP Title</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Title_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemist I</fullName>
            </value>
            <value>
                <fullName>Chemist - Waste Specialist</fullName>
            </value>
            <value>
                <fullName>Confined Space Rescue Technician</fullName>
            </value>
            <value>
                <fullName>Depack Chemist</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Driver/Operator</fullName>
            </value>
            <value>
                <fullName>Driver/Operator A Dry</fullName>
            </value>
            <value>
                <fullName>Driver/Operator A Wet</fullName>
            </value>
            <value>
                <fullName>Driver Operator - B Dry</fullName>
            </value>
            <value>
                <fullName>Field Service Project Mgmt.</fullName>
            </value>
            <value>
                <fullName>Field Service Sales Specialist</fullName>
            </value>
            <value>
                <fullName>Field Services Foreman</fullName>
            </value>
            <value>
                <fullName>Field Services Technician</fullName>
            </value>
            <value>
                <fullName>Household Waste Days</fullName>
            </value>
            <value>
                <fullName>Hydrovac Driver/Operator</fullName>
            </value>
            <value>
                <fullName>Laborer</fullName>
            </value>
            <value>
                <fullName>Plant Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>