objects/New_Hire_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Request (Employee)</relationshipLabel>
    <relationshipName>Employee_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>