objects/New_Hire_Request__c/fields/Employee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_First_Name__c</fullName>
    <label>Employee First Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>