objects/New_Hire_Request__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_ID__c</field>
            <operation>equals</operation>
            <value>0121L000001QT7QQAW</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Request (Employee Name)</relationshipLabel>
    <relationshipName>Employee_Request</relationshipName>
    <type>Lookup</type>
</CustomField>