objects/New_Hire_Request__c/fields/Employee_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Start_date__c</fullName>
    <inlineHelpText>This is NOT today's date, please use the date that this will take affect -- 2 Week Notice is requested!!!!</inlineHelpText>
    <label>Employee Start Date</label>
    <type>Date</type>
</CustomField>