objects/New_Hire_Request__c/fields/Equipment_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Supplies__c</fullName>
    <label>Equipment / Supplies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Title_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Cards ($40)</fullName>
            </value>
            <value>
                <fullName>Hotel / CLC Card</fullName>
            </value>
            <value>
                <fullName>Cell Phone Stipend ($40/mo)</fullName>
            </value>
            <value>
                <fullName>Company Cell Phone iPhone</fullName>
            </value>
            <value>
                <fullName>Desktop Computer ($1,000)</fullName>
            </value>
            <value>
                <fullName>Company Credit Card</fullName>
            </value>
            <value>
                <fullName>Laptop Computer ($2,100)</fullName>
            </value>
            <value>
                <fullName>Fuel Card</fullName>
            </value>
            <value>
                <fullName>iPad (for Drivers Only)</fullName>
            </value>
            <value>
                <fullName>Monitor(s)</fullName>
            </value>
            <value>
                <fullName>Security Badge (Metro Only)</fullName>
            </value>
            <value>
                <fullName>Polycom (Desk) Re-Use</fullName>
            </value>
            <value>
                <fullName>Polycom (Desk) Add New ($300)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>