objects/New_Hire_Request__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>New_Hire_Request</relationshipName>
    <type>Lookup</type>
</CustomField>