objects/New_Hire_Request__c/fields/Personal_Cell__c.field-meta.xml
<CustomField>
    <fullName>Personal_Cell__c</fullName>
    <label>Personal Cell</label>
    <type>Phone</type>
</CustomField>