objects/New_Hire_Request__c/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <label>Preferred Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>