objects/New_Hire_Request__c/fields/Resource_Type1__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type1__c</fullName>
    <formula>Resource_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Type</label>
    <type>Text</type>
</CustomField>