objects/New_Hire_Request__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Salesforce Labor Type.</inlineHelpText>
    <label>Employee Title</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Employee Request</relationshipLabel>
    <relationshipName>New_Hire_Request</relationshipName>
    <type>Lookup</type>
</CustomField>