objects/New_Hire_Request__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipName>New_Hire_Request</relationshipName>
    <type>Lookup</type>
</CustomField>