objects/New_Hire_Request__c/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <label>Software</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Title_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email ($20/mo)</fullName>
            </value>
            <value>
                <fullName>Enviroware</fullName>
            </value>
            <value>
                <fullName>NAV (Limited access)</fullName>
            </value>
            <value>
                <fullName>Purchase Orders (Coupa)</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Samsara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>