objects/New_Hire_Request__c/fields/Title_Category__c.field-meta.xml
<CustomField>
    <fullName>Title_Category__c</fullName>
    <label>Title Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Chemist</fullName>
            </value>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
            <value>
                <fullName>Equipment Operator</fullName>
            </value>
            <value>
                <fullName>Field Technician</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Foreman</fullName>
            </value>
            <value>
                <fullName>Office Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>