objects/New_Hire_Request__c/recordTypes/Employee_Move_Change.recordType-meta.xml
<RecordType>
    <fullName>Employee_Move_Change</fullName>
    <active>true</active>
    <label>Employee Move/Change</label>
</RecordType>