objects/New_Hire_Request__c/recordTypes/New_Hire.recordType-meta.xml
<RecordType>
    <fullName>New_Hire</fullName>
    <active>true</active>
    <label>New Hire</label>
</RecordType>