objects/New_Hire_Request__c/recordTypes/Termination.recordType-meta.xml
<RecordType>
    <fullName>Termination</fullName>
    <active>true</active>
    <label>Termination</label>
</RecordType>